# better-iptables

./: README.md  pyproject.toml
iptables/: __init__.py  enums.py  exceptions.py  iptables.py
tests/: test_iptables.py
