[tool.poetry]
name = "better-iptables"
version = "0.1.0"
description = "A lean pythonic iptables parser and generator"
authors = ["Jonatan Nevo <jonatannevo@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "iptables" }
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

